--- a/pom.xml
+++ b/pom.xml
@@ -3,4 +3,16 @@
   <groupId>com.wangchaoyue.untils</groupId>
   <artifactId>zhuzhiguang-utils</artifactId>
   <version>0.0.1-SNAPSHOT</version>
+  
+  <build>
+  
+  </build>
+  
+  <dependencies>
+  	<dependency>
+  		<groupId>junit</groupId>
+  		<artifactId>junit</artifactId>
+  		<version>4.12</version>
+  	</dependency>
+  </dependencies>
 </project>
